--- a/index.html
+++ b/index.html
@@ -38,5 +38,21 @@
     <div class="heart">❤️</div>
     <img src="https://i.postimg.cc/QMC25w8z/cf811da2315dafdd168c9e15f79954b8.jpg" alt="Ruibin">
 
-</body>
+</body>.letter {
+    background: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 10px;
+    width: 80%;
+    margin: 50px auto;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.letter h2 {
+    color: red;
+}
+.letter p {
+    font-size: 18px;
+    line-height: 1.6;
+}
+
 </html>
