--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
     <h1>佳诺，我爱你！<br>我要跟你在一起一辈子！</h1>
     
-    <img src="https://i.postimg.cc/y8QhJrrW/IMG-0906.jpg" alt="佳诺">
+    <img src="https://i.postimg.cc/vT1TMN7n/b6b4f92f76e572e1514f2cb6d066497b.jpg" alt="佳诺">
     <div class="heart">❤️</div>
     <img src="https://i.postimg.cc/QMC25w8z/cf811da2315dafdd168c9e15f79954b8.jpg" alt="Ruibin">
     <div class="letter">
