--- a/index.html
+++ b/index.html
@@ -17,5 +17,52 @@
         }
         img {
             width: 300px;
-            border-radius:
+            border-radius: 20px;
+            margin-top: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .heart {
+            font-size: 50px;
+            color: red;
+            margin: 20px auto;
+        }
+        .letter {
+            background: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            width: 80%;
+            margin: 50px auto;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .letter h2 {
+            color: red;
+        }
+        .letter p {
+            font-size: 18px;
+            line-height: 1.6;
+        }
+    </style>
+</head>
+<body>
+    <h1>佳诺，我爱你！<br>我要跟你在一起一辈子！</h1>
+    
+    <img src="https://i.postimg.cc/vT1TMN7n/b6b4f92f76e572e1514f2cb6d066497b.jpg" alt="CS 佳诺">
+    <div class="heart">❤️</div>
+    <img src="https://i.postimg.cc/QMC25w8z/cf811da2315dafdd168c9e15f79954b8.jpg" alt="SM Ruibin">
+    
+    <div class="letter">
+        <h2>致我最爱的佳诺</h2>
+        <p>佳诺，从遇见你的那一刻起，我的世界便多了一抹最美的色彩。</p>
+        <p>你的笑容如阳光般温暖，你的眼神如星辰般璀璨。每一次与你交谈，我的心跳都会不自觉加快，每一次看到你，我都希望时间能停留在这一刻。</p>
+        <p>佳诺，我喜欢你，真的很喜欢你。我愿意用一生去守护你，陪伴你，与你一同经历生活中的点点滴滴。</p>
+        <p>无论未来有多少风雨，我都会坚定地站在你身旁，牵着你的手，不离不弃。</p>
+        <p>佳诺，我爱你！❤️</p>
+        <p>——永远爱你的 Ruibin</p>
+    </div>
 
+</body>
+</html>
