--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
     <!-- 语言切换按钮 -->
     <div class="lang-switch">
-        <button onclick="toggleLanguage()">🌎 切换语言</button>
+        <button id="lang-btn" onclick="toggleLanguage()">🌎 切换语言</button>
     </div>
 
     <h1 id="title">佳诺，我爱你！<br>我要跟你在一起一辈子！</h1>
@@ -96,6 +96,8 @@
                 document.getElementById("p4").innerText = "No matter what storms the future brings, I will stand by your side, holding your hand, never leaving you.";
                 document.getElementById("p5").innerText = "Jianuo, I love you! ❤️";
                 document.getElementById("p6").innerText = "— Forever loving you, Ruibin";
+                // 更新按钮文本
+                document.getElementById("lang-btn").innerText = "🌎 Switch Language";
             } else {
                 // 切换回中文
                 document.getElementById("title").innerHTML = "佳诺，我爱你！<br>我要跟你在一起一辈子！";
@@ -106,6 +108,8 @@
                 document.getElementById("p4").innerText = "无论未来有多少风雨，我都会坚定地站在你身旁，牵着你的手，不离不弃。";
                 document.getElementById("p5").innerText = "佳诺，我爱你！❤️";
                 document.getElementById("p6").innerText = "——永远爱你的 Ruibin";
+                // 更新按钮文本
+                document.getElementById("lang-btn").innerText = "🌎 切换语言";
             }
             isChinese = !isChinese;
         }
@@ -113,5 +117,6 @@
 
 </body>
 </html>
+
 
 
