--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <button class="language-switch" onclick="toggleLanguage()">English</button>
     
     <audio id="bg-music" autoplay loop>
-        <source src="周杰伦 - 告白气球.mp3" type="audio/mpeg">
+        <source src="https://tomato663.github.io/music/" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <button onclick="toggleMusic()">暂停音乐</button>
