--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <button class="language-switch" onclick="toggleLanguage()">English</button>
     
     <audio id="bg-music" loop>
-        <source src="https://educationwaeduau-my.sharepoint.com/:u:/r/personal/mulin_li_student_education_wa_edu_au/Documents/%E5%91%A8%E6%9D%B0%E4%BC%A6%20-%20%E5%91%8A%E7%99%BD%E6%B0%94%E7%90%83.mp3?csf=1&web=1&e=QAWlXZ" type="audio/mpeg">
+        <source src="https://www.kumeiwp.com/wj/192112/2024/01/06/a087786db0a11d71a75a30159af80f10.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <button class="music-button" onclick="toggleMusic(event)">播放音乐</button>
